--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org8c3b14a" class="outline-2 latest-section">
-<h2 id="org8c3b14a"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org8c3b14a">
+<section id="outline-container-org73a0c1c" class="outline-2 latest-section">
+<h2 id="org73a0c1c"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org73a0c1c">
 <ul class="org-ul">
-<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/tutorials_list/list_of_tutorials/index.html">List of All Tutorials &amp; Notes</a><br></li>
+<li><span class="timestamp-wrapper"><span class="timestamp">25 Mar 2024</span></span>  <a href="posts/physics/spin_stats_theorem/index.html">Do we really understand the Spin Statistics theorem?</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">23 Mar 2024</span></span>  <a href="posts/poetry/faust/index.html">Goethe&rsquo;s Faust: The Limits of Enlightenment</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">26 Feb 2024</span></span>  <a href="posts/ai_ml/list_of_ml_posts/index.html">Posts on AI/ML</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">24 Feb 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
