--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org79e9f14">Introduction</a></li>
-<li><a href="#orgbf26836">Understanding Stable Diffusion</a></li>
-<li><a href="#org71c1f27">How Stable Diffusion Works</a></li>
-<li><a href="#org69e5220">Applications of Stable Diffusion</a></li>
-<li><a href="#orgc2dfe8a">Conclusion</a></li>
-<li><a href="#orga632c5e">Code</a></li>
+<li><a href="#org17a7b70">Introduction</a></li>
+<li><a href="#org6c1f0d9">Understanding Stable Diffusion</a></li>
+<li><a href="#orgc2a9b3d">How Stable Diffusion Works</a></li>
+<li><a href="#orgb1c2036">Applications of Stable Diffusion</a></li>
+<li><a href="#orgdde07e7">Conclusion</a></li>
+<li><a href="#org2436f55">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org79e9f14" class="outline-2">
-<h2 id="org79e9f14">Introduction</h2>
-<div class="outline-text-2" id="text-org79e9f14">
+<section id="outline-container-org17a7b70" class="outline-2">
+<h2 id="org17a7b70">Introduction</h2>
+<div class="outline-text-2" id="text-org17a7b70">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgbf26836" class="outline-2">
-<h2 id="orgbf26836">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgbf26836">
+<section id="outline-container-org6c1f0d9" class="outline-2">
+<h2 id="org6c1f0d9">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org6c1f0d9">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org71c1f27" class="outline-2">
-<h2 id="org71c1f27">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org71c1f27">
+<section id="outline-container-orgc2a9b3d" class="outline-2">
+<h2 id="orgc2a9b3d">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgc2a9b3d">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org69e5220" class="outline-2">
-<h2 id="org69e5220">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org69e5220">
+<section id="outline-container-orgb1c2036" class="outline-2">
+<h2 id="orgb1c2036">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgb1c2036">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orgc2dfe8a" class="outline-2">
-<h2 id="orgc2dfe8a">Conclusion</h2>
-<div class="outline-text-2" id="text-orgc2dfe8a">
+<section id="outline-container-orgdde07e7" class="outline-2">
+<h2 id="orgdde07e7">Conclusion</h2>
+<div class="outline-text-2" id="text-orgdde07e7">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orga632c5e" class="outline-2">
-<h2 id="orga632c5e">Code</h2>
-<div class="outline-text-2" id="text-orga632c5e">
+<section id="outline-container-org2436f55" class="outline-2">
+<h2 id="org2436f55">Code</h2>
+<div class="outline-text-2" id="text-org2436f55">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
