--- a/README.html
+++ b/README.html
@@ -19,7 +19,6 @@
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=c18771e4d9917f7bbeba0dc8707195c42a1cf1d75f55928214254bd81d1a0c6e'/>
 <link rel="stylesheet" href="css/site.css?v=b5b7fa25d3b5180d3a91f21724efbeef14457af6f2d28a5d32e82233efe9f356" type="text/css">
 </head>
 <body>
@@ -82,9 +81,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org6efe973" class="outline-2">
-<h2 id="org6efe973">Introduction</h2>
-<div class="outline-text-2" id="text-org6efe973">
+<section id="outline-container-org2631425" class="outline-2">
+<h2 id="org2631425">Introduction</h2>
+<div class="outline-text-2" id="text-org2631425">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
