--- a/README.html
+++ b/README.html
@@ -81,9 +81,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org2631425" class="outline-2">
-<h2 id="org2631425">Introduction</h2>
-<div class="outline-text-2" id="text-org2631425">
+<section id="outline-container-org61ff479" class="outline-2">
+<h2 id="org61ff479">Introduction</h2>
+<div class="outline-text-2" id="text-org61ff479">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
