--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org06e340e">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#orgb2795ba">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-org06e340e" class="outline-2">
-<h2 id="org06e340e">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org06e340e">
+<section id="outline-container-orgb2795ba" class="outline-2">
+<h2 id="orgb2795ba">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-orgb2795ba">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
