deploy: 7d95c6780df2254cf243beb189c8039b49e002a5

--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 16 Apr. 2024 -->
+<!-- 12 Jun. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org76f0954">Introduction</a></li>
-<li><a href="#orgf91cc80">Understanding Stable Diffusion</a></li>
-<li><a href="#orgdbd7c8a">How Stable Diffusion Works</a></li>
-<li><a href="#org48f62c0">Applications of Stable Diffusion</a></li>
-<li><a href="#org375b0a1">Conclusion</a></li>
-<li><a href="#orgdaa5c79">Code</a></li>
+<li><a href="#org951e01a">Introduction</a></li>
+<li><a href="#org49f63bb">Understanding Stable Diffusion</a></li>
+<li><a href="#orgad89022">How Stable Diffusion Works</a></li>
+<li><a href="#orgc6ed463">Applications of Stable Diffusion</a></li>
+<li><a href="#org28e9810">Conclusion</a></li>
+<li><a href="#org123e56c">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org76f0954" class="outline-2">
-<h2 id="org76f0954">Introduction</h2>
-<div class="outline-text-2" id="text-org76f0954">
+<section id="outline-container-org951e01a" class="outline-2">
+<h2 id="org951e01a">Introduction</h2>
+<div class="outline-text-2" id="text-org951e01a">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgf91cc80" class="outline-2">
-<h2 id="orgf91cc80">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgf91cc80">
+<section id="outline-container-org49f63bb" class="outline-2">
+<h2 id="org49f63bb">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org49f63bb">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgdbd7c8a" class="outline-2">
-<h2 id="orgdbd7c8a">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgdbd7c8a">
+<section id="outline-container-orgad89022" class="outline-2">
+<h2 id="orgad89022">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgad89022">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org48f62c0" class="outline-2">
-<h2 id="org48f62c0">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org48f62c0">
+<section id="outline-container-orgc6ed463" class="outline-2">
+<h2 id="orgc6ed463">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgc6ed463">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org375b0a1" class="outline-2">
-<h2 id="org375b0a1">Conclusion</h2>
-<div class="outline-text-2" id="text-org375b0a1">
+<section id="outline-container-org28e9810" class="outline-2">
+<h2 id="org28e9810">Conclusion</h2>
+<div class="outline-text-2" id="text-org28e9810">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgdaa5c79" class="outline-2">
-<h2 id="orgdaa5c79">Code</h2>
-<div class="outline-text-2" id="text-orgdaa5c79">
+<section id="outline-container-org123e56c" class="outline-2">
+<h2 id="org123e56c">Code</h2>
+<div class="outline-text-2" id="text-org123e56c">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -233,7 +233,7 @@ plt.show()
 <footer id="postamble" class="status">
 <p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 16 Apr. 2024</p>
+<p class="date">Created: 12 Jun. 2024</p>
 </footer>
 </body>
 </html>
