--- a/tutorials/BareBonesML/index.html
+++ b/tutorials/BareBonesML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 16 Apr. 2024 -->
+<!-- 12 Jun. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>BareBonesML: Inner workings of ML algorithms</title>
@@ -66,43 +66,43 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcfd83fd">Supervised Algorithms</a>
+<li><a href="#org96247e1">Supervised Algorithms</a>
 <ul>
-<li><a href="#org02b9b47">Support Vector Machine (SVM)</a>
+<li><a href="#orgc00041c">Support Vector Machine (SVM)</a>
 <ul>
-<li><a href="#orgb569178">Dealing with outliers: The Slack term</a></li>
-<li><a href="#org39a7dcf">Dealing with non-linear speration boundires: Kernel Trick</a></li>
+<li><a href="#org0922034">Dealing with outliers: The Slack term</a></li>
+<li><a href="#org288af94">Dealing with non-linear speration boundires: Kernel Trick</a></li>
 </ul>
 </li>
-<li><a href="#orgb028fd6">Naive Bayes</a>
+<li><a href="#orgc180361">Naive Bayes</a>
 <ul>
-<li><a href="#org9e44f65">Limitations</a></li>
+<li><a href="#orgcf23bdc">Limitations</a></li>
 </ul>
 </li>
-<li><a href="#org93f42c8">Ensemble Learning</a>
+<li><a href="#org72bb1bc">Ensemble Learning</a>
 <ul>
-<li><a href="#org2c6b6d6">Random Forest (Bagging)</a></li>
-<li><a href="#orgc5de098">Gradient Boosting Machine</a></li>
+<li><a href="#org03b464f">Random Forest (Bagging)</a></li>
+<li><a href="#orgd9fe87e">Gradient Boosting Machine</a></li>
 </ul>
 </li>
-<li><a href="#org883094e">Gaussian Discriminant Analysis</a></li>
-<li><a href="#orgeaf4592">K-Nearest Neighbours</a></li>
+<li><a href="#org5235d8a">Gaussian Discriminant Analysis</a></li>
+<li><a href="#orgb1f9a64">K-Nearest Neighbours</a></li>
 </ul>
 </li>
-<li><a href="#org23ec32a">Unsupervised Algorithms</a>
+<li><a href="#orgb915b11">Unsupervised Algorithms</a>
 <ul>
-<li><a href="#orged2df3f">K-Means Clustering</a></li>
-<li><a href="#orgc991337">PCA</a></li>
+<li><a href="#org2e00263">K-Means Clustering</a></li>
+<li><a href="#orgb68e164">PCA</a></li>
 </ul>
 </li>
-<li><a href="#orgcbf0e10">Sequential Data</a>
+<li><a href="#org5e18f32">Sequential Data</a>
 <ul>
-<li><a href="#org8af49e3">Hidden Markov Model</a></li>
+<li><a href="#org1333db1">Hidden Markov Model</a></li>
 </ul>
 </li>
-<li><a href="#orgc9c535b">Optimization techniques</a>
+<li><a href="#org58d3a20">Optimization techniques</a>
 <ul>
-<li><a href="#org687df1d">Simulated annealing</a></li>
+<li><a href="#orgd5335af">Simulated annealing</a></li>
 </ul>
 </li>
 </ul>
@@ -133,13 +133,13 @@ not intended to replace standard machine learning libraries for use in<br>
 production.<br>
 </p>
 
-<section id="outline-container-orgcfd83fd" class="outline-2">
-<h2 id="orgcfd83fd">Supervised Algorithms</h2>
-<div class="outline-text-2" id="text-orgcfd83fd">
+<section id="outline-container-org96247e1" class="outline-2">
+<h2 id="org96247e1">Supervised Algorithms</h2>
+<div class="outline-text-2" id="text-org96247e1">
 </div>
-<div id="outline-container-org02b9b47" class="outline-3">
-<h3 id="org02b9b47">Support Vector Machine (SVM)</h3>
-<div class="outline-text-3" id="text-org02b9b47">
+<div id="outline-container-orgc00041c" class="outline-3">
+<h3 id="orgc00041c">Support Vector Machine (SVM)</h3>
+<div class="outline-text-3" id="text-orgc00041c">
 <p>
 Central to the SVM is the concept of maximizing the margin between classes,<br>
 achieved by finding the hyperplane that separates the data points of different<br>
@@ -203,9 +203,9 @@ as follows:<br>
 </p>
 </div>
 
-<div id="outline-container-orgb569178" class="outline-4">
-<h4 id="orgb569178">Dealing with outliers: The Slack term</h4>
-<div class="outline-text-4" id="text-orgb569178">
+<div id="outline-container-org0922034" class="outline-4">
+<h4 id="org0922034">Dealing with outliers: The Slack term</h4>
+<div class="outline-text-4" id="text-org0922034">
 <p>
 Slack refers to the allowance of misclassification or errors in the SVM<br>
 optimization process. Introducing slack enables SVM to handle linearly/non-linearly<br>
@@ -216,9 +216,9 @@ better to complex datasets, although too much slack can lead to overfitting.<br>
 </div>
 </div>
 
-<div id="outline-container-org39a7dcf" class="outline-4">
-<h4 id="org39a7dcf">Dealing with non-linear speration boundires: Kernel Trick</h4>
-<div class="outline-text-4" id="text-org39a7dcf">
+<div id="outline-container-org288af94" class="outline-4">
+<h4 id="org288af94">Dealing with non-linear speration boundires: Kernel Trick</h4>
+<div class="outline-text-4" id="text-org288af94">
 <p>
 Thee kernel trick is a method used to extend SVMs for non-linear decision<br>
 boundaries without explicitly mapping the input data into a higher-dimensional<br>
@@ -238,9 +238,9 @@ applications.<br>
 </div>
 </div>
 
-<div id="outline-container-orgb028fd6" class="outline-3">
-<h3 id="orgb028fd6">Naive Bayes</h3>
-<div class="outline-text-3" id="text-orgb028fd6">
+<div id="outline-container-orgc180361" class="outline-3">
+<h3 id="orgc180361">Naive Bayes</h3>
+<div class="outline-text-3" id="text-orgc180361">
 <p>
 Naive Bayes is a probabilistic algorithm commonly used for classification<br>
 tasks. Its simplicity, speed, and effectiveness make it a popular choice for<br>
@@ -306,9 +306,9 @@ Output: Predicted class labels for the test set.
 </pre>
 </div>
 
-<div id="outline-container-org9e44f65" class="outline-4">
-<h4 id="org9e44f65">Limitations</h4>
-<div class="outline-text-4" id="text-org9e44f65">
+<div id="outline-container-orgcf23bdc" class="outline-4">
+<h4 id="orgcf23bdc">Limitations</h4>
+<div class="outline-text-4" id="text-orgcf23bdc">
 <ul class="org-ul">
 <li><b>Assumption of Feature Independence</b><br></li>
 <li><b>Handling of Continuous Features</b><br>
@@ -332,9 +332,9 @@ sparse feature spaces.<br>
 </div>
 </div>
 
-<div id="outline-container-org93f42c8" class="outline-3">
-<h3 id="org93f42c8">Ensemble Learning</h3>
-<div class="outline-text-3" id="text-org93f42c8">
+<div id="outline-container-org72bb1bc" class="outline-3">
+<h3 id="org72bb1bc">Ensemble Learning</h3>
+<div class="outline-text-3" id="text-org72bb1bc">
 <p>
 Ensemble learning is a ML technique that combines the predictions of multiple<br>
 individual models to produce a stronger overall prediction. The idea behind<br>
@@ -372,9 +372,9 @@ error in the previous step.<br></li>
 </div>
 
 
-<div id="outline-container-org2c6b6d6" class="outline-4">
-<h4 id="org2c6b6d6">Random Forest (Bagging)</h4>
-<div class="outline-text-4" id="text-org2c6b6d6">
+<div id="outline-container-org03b464f" class="outline-4">
+<h4 id="org03b464f">Random Forest (Bagging)</h4>
+<div class="outline-text-4" id="text-org03b464f">
 <p>
 Random Forest is popular ensemble learning algorithm based on <b><i>Bagging</i></b>.<br>
 During the training phase, multiple decision trees are trained.  Each decision<br>
@@ -445,9 +445,9 @@ predict(forest, X_test):
 </div>
 
 
-<div id="outline-container-orgc5de098" class="outline-4">
-<h4 id="orgc5de098">Gradient Boosting Machine</h4>
-<div class="outline-text-4" id="text-orgc5de098">
+<div id="outline-container-orgd9fe87e" class="outline-4">
+<h4 id="orgd9fe87e">Gradient Boosting Machine</h4>
+<div class="outline-text-4" id="text-orgd9fe87e">
 <p>
 It works by combining multiple weak learners, typically decision trees, to<br>
 create a strong learner that can make accurate predictions. Unlike traditional<br>
@@ -468,9 +468,9 @@ LightGBM have made it a cornerstone of modern machine learning workflows.<br>
 </div>
 </div>
 
-<div id="outline-container-org883094e" class="outline-3">
-<h3 id="org883094e">Gaussian Discriminant Analysis</h3>
-<div class="outline-text-3" id="text-org883094e">
+<div id="outline-container-org5235d8a" class="outline-3">
+<h3 id="org5235d8a">Gaussian Discriminant Analysis</h3>
+<div class="outline-text-3" id="text-org5235d8a">
 <p>
 Gaussian Discriminant Analysis (GDA) is a probabilistic generative model used<br>
 for classification tasks. In GDA, it is assumed that the features of each class<br>
@@ -493,9 +493,9 @@ spaces or with highly skewed or multimodal data.<br>
 </div>
 </div>
 
-<div id="outline-container-orgeaf4592" class="outline-3">
-<h3 id="orgeaf4592">K-Nearest Neighbours</h3>
-<div class="outline-text-3" id="text-orgeaf4592">
+<div id="outline-container-orgb1f9a64" class="outline-3">
+<h3 id="orgb1f9a64">K-Nearest Neighbours</h3>
+<div class="outline-text-3" id="text-orgb1f9a64">
 <p>
 K-Nearest Neighbors (KNN) is a simple yet powerful supervised machine learning<br>
 algorithm used for both classification and regression tasks. In KNN, the<br>
@@ -520,13 +520,13 @@ between bias and variance.<br>
 </section>
 
 
-<section id="outline-container-org23ec32a" class="outline-2">
-<h2 id="org23ec32a">Unsupervised Algorithms</h2>
-<div class="outline-text-2" id="text-org23ec32a">
+<section id="outline-container-orgb915b11" class="outline-2">
+<h2 id="orgb915b11">Unsupervised Algorithms</h2>
+<div class="outline-text-2" id="text-orgb915b11">
 </div>
-<div id="outline-container-orged2df3f" class="outline-3">
-<h3 id="orged2df3f">K-Means Clustering</h3>
-<div class="outline-text-3" id="text-orged2df3f">
+<div id="outline-container-org2e00263" class="outline-3">
+<h3 id="org2e00263">K-Means Clustering</h3>
+<div class="outline-text-3" id="text-org2e00263">
 <p>
 K-Means is an algorithm used for partitioning a dataset into K distinct,<br>
 non-overlapping clusters. The algorithm works by iteratively assigning data<br>
@@ -559,9 +559,9 @@ Here is the logic:<br>
 </div>
 </div>
 
-<div id="outline-container-orgc991337" class="outline-3">
-<h3 id="orgc991337">PCA</h3>
-<div class="outline-text-3" id="text-orgc991337">
+<div id="outline-container-orgb68e164" class="outline-3">
+<h3 id="orgb68e164">PCA</h3>
+<div class="outline-text-3" id="text-orgb68e164">
 <p>
 Principal Component Analysis (PCA) is a dimensionality reduction technique<br>
 commonly used in data analysis and machine learning. Its primary goal is to<br>
@@ -606,13 +606,13 @@ the transformed data.<br></li>
 </section>
 
 
-<section id="outline-container-orgcbf0e10" class="outline-2">
-<h2 id="orgcbf0e10">Sequential Data</h2>
-<div class="outline-text-2" id="text-orgcbf0e10">
+<section id="outline-container-org5e18f32" class="outline-2">
+<h2 id="org5e18f32">Sequential Data</h2>
+<div class="outline-text-2" id="text-org5e18f32">
 </div>
-<div id="outline-container-org8af49e3" class="outline-3">
-<h3 id="org8af49e3">Hidden Markov Model</h3>
-<div class="outline-text-3" id="text-org8af49e3">
+<div id="outline-container-org1333db1" class="outline-3">
+<h3 id="org1333db1">Hidden Markov Model</h3>
+<div class="outline-text-3" id="text-org1333db1">
 <p>
 Hidden Markov Models (HMMs) have been succfully used in various fields from<br>
 speech recognition to bioinformatics, for modeling sequential data. At its core,<br>
@@ -678,13 +678,13 @@ decision-making.<br>
 
 
 
-<section id="outline-container-orgc9c535b" class="outline-2">
-<h2 id="orgc9c535b">Optimization techniques</h2>
-<div class="outline-text-2" id="text-orgc9c535b">
+<section id="outline-container-org58d3a20" class="outline-2">
+<h2 id="org58d3a20">Optimization techniques</h2>
+<div class="outline-text-2" id="text-org58d3a20">
 </div>
-<div id="outline-container-org687df1d" class="outline-3">
-<h3 id="org687df1d">Simulated annealing</h3>
-<div class="outline-text-3" id="text-org687df1d">
+<div id="outline-container-orgd5335af" class="outline-3">
+<h3 id="orgd5335af">Simulated annealing</h3>
+<div class="outline-text-3" id="text-orgd5335af">
 <p>
 <b>A technique to find approximate global optimum in hightly rugged energy<br>
 landscapes</b><br>
@@ -720,7 +720,7 @@ travelling salesman problem:<br>
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Mar. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 16 Apr. 2024</p>
+<p class="date">Created: 12 Jun. 2024</p>
 </footer>
 </body>
 </html>
